--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <!-- <li><a href="#">Services</a></li> -->
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
             <div class="header-text">
                 <p>Frontend Developer</p>
-                <h1>Hi, I'm <span>Vishal</span><br>Srivastava</h1>
+                <h1>Hi, I'm <span>Vishal</span><br>Srivastava</h1>`
+                <h6>Passionate about crafting smooth and interactive web experiences</h6>
             </div>
          </div>
      </div>
