--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <!-- <li><a href="#">Services</a></li> -->
+                    <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -56,6 +56,23 @@
                     </ul>
                 </div>
 
+            </div>
+        </div>
+    </div>
+</div>
+<div id="services">
+    <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+            <div>
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis molestiae voluptatibus corporis, labore inventore voluptatum quo, id velit nobis hic aut ipsam veniam accusamus officia dignissimos? Quasi, vitae ipsum.</p>
+                <a href="#">Learn more</a>
+            </div>
+            <div>
+                <h2>App Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis molestiae voluptatibus corporis, labore inventore voluptatum quo, id velit nobis hic aut ipsam veniam accusamus officia dignissimos? Quasi, vitae ipsum.</p>
+                <a href="#">Learn more</a>
             </div>
         </div>
     </div>
