My-Services-hover

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         <div class="services-list">
             <div>
                 <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis molestiae voluptatibus corporis, labore inventore voluptatum quo, id velit nobis hic aut ipsam veniam accusamus officia dignissimos? Quasi, vitae ipsum.</p>
+                <p>I design modern, responsive, and user-friendly websites that deliver a seamless experience. From custom web design and landing pages to website redesigns and performance optimization, I create visually appealing and high-performing websites that leave a lasting impression.</p>
                 <a href="#">Learn more</a>
             </div>
             <div>
                 <h2>App Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam omnis molestiae voluptatibus corporis, labore inventore voluptatum quo, id velit nobis hic aut ipsam veniam accusamus officia dignissimos? Quasi, vitae ipsum.</p>
+                <p>I design modern, responsive, and user-friendly iOS applications using Swift to deliver a seamless experience. From custom app development and UI/UX design to app optimization and performance enhancements, I create visually appealing and high-performing apps that provide a smooth and engaging user experience.</p>
                 <a href="#">Learn more</a>
             </div>
         </div>
