--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
             <div class="header-text">
                 <p>Frontend Developer</p>
-                <h1>Hi, I'm <span>Vishal</span><br>Srivastava</h1>`
+                <h1>Hi, I'm <span>Vishal</span><br>Srivastava</h1>
                 <h6>Passionate about crafting smooth and interactive web experiences</h6>
             </div>
          </div>
@@ -34,7 +34,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto nulla aperiam eum eos? Quod numquam nobis placeat quae nostrum, perspiciatis reiciendis beatae quis corporis natus inventore ipsam, accusantium laborum explicabo! </p>
+                <p>I am a Frontend Developer who loves creating clean, interactive, and user-friendly websites. Using HTML, CSS, JavaScript, and modern frameworks, I design smooth, visually appealing, and fast-performing web experiences.</p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                     <p class="tab-links" onclick="opentab('education')">Education</p>
