--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vishal's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/be007cf95f.js" crossorigin="anonymous"></script>
 </head>
 <body>
      <div id="header">
@@ -41,18 +42,19 @@
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>Web Development</span><br><li>HTML</li><li>CSS</li><li>JavaScript</li><br>
+                        <li><span>Web Development</span><br><li>HTML</li><li>CSS</li><li>Tailwind CSS</li><li>JavaScript</li><br>
                         <li><span>DSA</span><br><li>Java</li></li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>Secondary & Intermediate</span><br><li>Sant Atulanand Convent School, Varanasi</li></li>
-                        <li><span></span>High School Percentage: </span>92.50%</li>
-                        <li><span></span>Intermediate Percentage: </span>90.20%</li><br>
-                        <li><span>Graduation</span><br><li>Ajay Kumar Garg Engineering College, Ghaziabad</li></li>
-                        <li>Course: Bachelor of Technology</li>
-                        <li>Branch: Computer Science & Engineering/li>
+                        <li><span><p>Secondary & Intermediate</p></span><li><span>School: </span>Sant Atulanand Convent School, Varanasi</li></li>
+                        <li><span>High School Percentage: </span>92.50%</li>
+                        <li><span>Intermediate Percentage: </span>90.20%</li><br>
+                        <li><span><p>Graduation</p></span><li><span>College: </span>Ajay Kumar Garg Engineering College, Ghaziabad</li></li>
+                        <li><span>Course: </span>Bachelor of Technology</li>
+                        <li><span>Branch: </span>Computer Science & Engineering</li>
+                        <li><span>Year: </span>2023-2027</li>
                     </ul>
                 </div>
 
@@ -75,6 +77,33 @@
                 <a href="#">Learn more</a>
             </div>
         </div>
+    </div>
+</div>
+<div id="portfolio">
+    <div class="container">
+        <h1 class="sub-title">My Work</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="Guess.jpeg">
+                <div class="layer">
+                    <h3>Number Guesser Game</h3>
+                    <p>I created a Number Guesser game that challenges players to guess a randomly generated number within a given range. It features an interactive UI, real-time feedback, and engaging gameplay. This project highlights my skills in JavaScript, event handling, and user interaction design.</p>
+                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="e-commerce.jpeg">
+               <div class="layer">
+                <h3>Amazon Clone website</h3>
+                <p>This project showcases my skills in frontend development, including HTML, CSS, JavaScript, and modern frameworks to create a seamless shopping experience.</p>
+                <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+               </div>
+            </div>
+            <!-- <div class="work">
+                <img src="vishalpic.jpeg">
+            </div> -->
+        </div>
+        <a href="#" class="btn">See more</a>
     </div>
 </div>
 <script src="script.js"></script>
