--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>Web Development</span><br><li>HTML</li><li>CSS</li><li>Tailwind CSS</li><li>JavaScript</li><br>
-                        <li><span>DSA</span><br><li>Java</li></li>
+                        <li><span><p>Web Development</p></span><li>HTML</li><li>CSS</li><li>Tailwind CSS</li><li>JavaScript</li><br>
+                        <li><span><p>DSA</p></span><li>Java</li></li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
@@ -95,7 +95,7 @@
                 <img src="e-commerce.jpeg">
                <div class="layer">
                 <h3>Amazon Clone website</h3>
-                <p>This project showcases my skills in frontend development, including HTML, CSS, JavaScript, and modern frameworks to create a seamless shopping experience.</p>
+                <p>This project showcases my skills in frontend development, including HTML, CSS and modern frameworks to create a seamless shopping experience.</p>
                 <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
                </div>
             </div>
@@ -104,6 +104,36 @@
             </div> -->
         </div>
         <a href="#" class="btn">See more</a>
+    </div>
+</div>
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-solid fa-paper-plane"></i> vsjee2002@gmail.com</p>
+                <p><i class="fa-solid fa-square-phone"></i>9621281471</p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/vishalsriv29"><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                </div>
+                <a href="" download class="btn btn2">Download CV</a>
+            </div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="email" placeholder="You email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>Designed & Developed by Vishal Srivastava | © 2025. All Rights Reserved.
+        </p>
     </div>
 </div>
 <script src="script.js"></script>
