--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <nav>
                 <img src="" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -64,6 +64,7 @@
         </div>
     </div>
 </div>
+<br>
 <div id="services">
     <div class="container">
         <h1 class="sub-title">My Services</h1>
@@ -108,6 +109,11 @@
         <a href="#" class="btn">See more</a>
     </div>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div id="contact">
     <div class="container">
         <div class="row">
@@ -126,7 +132,7 @@
             <div class="contact-right">
                 <form>
                     <input type="text" name="Name" placeholder="Your Name" required>
-                    <input type="email" name="email" placeholder="You email" required>
+                    <input type="email" name="Email" placeholder="You email" required>
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                     <button type="submit" class="btn btn2">Submit</button>
                 </form>
