--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                     <button type="submit" class="btn btn2">Submit</button>
                 </form>
+                <span id="msg"></span>
             </div>
         </div>
     </div>
@@ -148,11 +149,18 @@
 <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbwm8AG-8mxRnlBUvZ00XR6efnRIPLulY4UkWb2ipoo33TjLC5bifYmi9CTh9ggKQMJL/exec'
     const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
   
     form.addEventListener('submit', e => {
       e.preventDefault()
       fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => console.log('Success!', response))
+        .then(response => {
+            msg.innerHTML = "Message sent successfully";
+            setTimeout(function(){
+                msg.innerHTML = "";
+            },5000)
+            form.reset();
+        })
         .catch(error => console.error('Error!', error.message))
     })
   </script>
