--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
      <div id="header">
          <div class="container">
             <nav>
+                <!-- <h1>VISHAL SRIVASTAVA</h1> -->
                 <img src="" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
