--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
          <div class="container">
             <nav>
                 <!-- <h1>VISHAL SRIVASTAVA</h1> -->
-                <img src="" class="logo">
+                <!-- <h1 class="logo">VISHAL SRIVASTAVA</h1> -->
+                <a href="" download class="btn" id="btn3">Download CV</a>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -23,11 +24,16 @@
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
+            <div class="landing-layout">
             <div class="header-text">
                 <p>Frontend Developer</p>
                 <h1>Hi, I'm <span>Vishal</span><br>Srivastava</h1>
                 <h6>Passionate about crafting smooth and interactive web experiences</h6>
             </div>
+            <div class="front-image">
+                <img src="vishalpic.jpeg" class="image1">
+            </div>
+        </div>
          </div>
      </div>
 <div id="about">
