--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="vishalpic.jpeg">
+                <img src="Vishal1.jpeg">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -57,12 +57,12 @@
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span><p>Secondary & Intermediate</p></span><li><span>School: </span>Sant Atulanand Convent School, Varanasi</li></li>
+                        <!-- <li><span><p>Secondary & Intermediate</p></span><li><span>School: </span>Sant Atulanand Convent School, Varanasi</li></li>
                         <li><span>High School Percentage: </span>92.50%</li>
-                        <li><span>Intermediate Percentage: </span>90.20%</li><br>
+                        <li><span>Intermediate Percentage: </span>90.20%</li><br> -->
                         <li><span><p>Graduation</p></span><li><span>College: </span>Ajay Kumar Garg Engineering College, Ghaziabad</li></li>
                         <li><span>Course: </span>Bachelor of Technology</li>
-                        <li><span>Branch: </span>Computer Science & Engineering</li>
+                        <li><span>Branch: </span>Computer Science & Engineering (Data Science)</li>
                         <li><span>Year: </span>2023-2027</li>
                     </ul>
                 </div>
